fix selection overflow

--- a/src/css/base.less
+++ b/src/css/base.less
@@ -31,3 +31,7 @@ a {
 label {
   line-height: 2;
 }
+
+article {
+  overflow: hidden;
+}
