--- a/static/css/main.css
+++ b/static/css/main.css
@@ -39,6 +39,9 @@ a:hover {
 label {
   line-height: 2;
 }
+article {
+  overflow: hidden;
+}
 #header {
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
   padding: 25px 60px;
